# QtDMM

./: .gitignore  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt
src/sources/: dmmgraph.cpp  readerthread.cpp
src/translations/: qtdmm_de.ts
